--- a/src/composer.json
+++ b/src/composer.json
@@ -7,13 +7,16 @@
         "php": ">=8.0.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/annotations": "^1.13",
         "symfony/apache-pack": "^1.0",
         "symfony/console": "6.0.*",
         "symfony/dotenv": "6.0.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.0.*",
         "symfony/runtime": "6.0.*",
-        "symfony/yaml": "6.0.*"
+        "symfony/webpack-encore-bundle": "^1.15",
+        "symfony/yaml": "6.0.*",
+        "twig/twig": "^3.0"
     },
     "config": {
         "allow-plugins": {
