--- a/src/composer.json
+++ b/src/composer.json
@@ -21,6 +21,7 @@
         "symfony/proxy-manager-bridge": "6.0.*",
         "symfony/runtime": "6.0.*",
         "symfony/security-bundle": "6.0.*",
+        "symfony/security-core": "6.0.*",
         "symfony/validator": "6.0.*",
         "symfony/webpack-encore-bundle": "^1.15",
         "symfony/yaml": "6.0.*",
